[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentic-galactic-discovery"
version = "0.1.0"
description = "Real-time astronomical transient detection and anomaly discovery using agentic AI"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Parth"},
]
keywords = ["astronomy", "transients", "streaming", "AI", "agents", "ZTF", "LSST"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    # Astronomy
    "astropy>=6.0",
    "astroquery>=0.4.7",

    # Data & Serialization
    "pandas>=2.1",
    "pyarrow>=14.0",
    "fastavro>=1.9",
    "pyyaml>=6.0",

    # HTTP & API
    "requests>=2.31",
    "httpx>=0.25",
    "tenacity>=8.2",        # Retry logic

    # Data modeling & config
    "pydantic>=2.5",
    "pydantic-settings>=2.1",

    # Computation
    "numpy>=1.26",
    "scipy>=1.11",

    # Logging
    "structlog>=23.2",
]

[project.optional-dependencies]
agents = [
    "anthropic>=0.40",
]
streaming = [
    "fink-client>=6.0",
    "confluent-kafka>=2.3",
]
databricks = [
    "delta-spark>=3.0",
    "pyspark>=3.5",
    "mlflow>=2.9",
]
dashboard = [
    "streamlit>=1.29",
    "plotly>=5.18",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.1.9",
    "black>=23.12",
    "great-expectations>=0.18",
    "responses>=0.24",     # Mock HTTP responses
    "mypy>=1.8",
]

[project.urls]
Repository = "https://github.com/<your-org>/agentic-galactic-discovery"
Documentation = "https://github.com/<your-org>/agentic-galactic-discovery/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring network access",
    "databricks: marks tests requiring Databricks connection",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
